--- a/include/rest.yaml
+++ b/include/rest.yaml
@@ -3,6 +3,9 @@
 #-------------------------------------------
 rest:
   - resource: https://api.github.com/repos/home-assistant/core/releases/latest
+    authentication: basic
+    username: !secret github_username 
+    password: !secret github_token
     sensor:
       - name: hass_release_notes
         value_template: >
@@ -10,8 +13,14 @@ rest:
         json_attributes:
           - body
     scan_interval: 21600
+    headers: &rest_header
+      Accept: application/vnd.github.v3+json
+      Content-Type: application/json
+      User-Agent: HAS Releases
 
   - resource: https://api.github.com/repos/home-assistant/core/releases?per_page=1
+    username: !secret github_username 
+    password: !secret github_token
     sensor:
       - name: hass_release_notes_rc
         value_template: >
@@ -19,8 +28,12 @@ rest:
         json_attributes:
           - body
     scan_interval: 21600
+    headers: *rest_header
 
   - resource: https://api.github.com/repos/AdguardTeam/AdGuardHome/releases/latest
+    authentication: basic
+    username: !secret github_username 
+    password: !secret github_token
     sensor:
       - name: adguardhome_release_notes
         value_template: >
@@ -29,8 +42,12 @@ rest:
           - body
           - html_url
     scan_interval: 21600
+    headers: *rest_header
 
   - resource: https://api.github.com/repos/photoprism/photoprism/releases/latest
+    authentication: basic
+    username: !secret github_username 
+    password: !secret github_token
     sensor:
       - name: photoprism_release_notes
         value_template: >
@@ -39,8 +56,12 @@ rest:
           - body
           - html_url
     scan_interval: 21600
+    headers: *rest_header
 
   - resource: https://api.github.com/repos/firefly-iii/firefly-iii/releases/latest
+    authentication: basic
+    username: !secret github_username 
+    password: !secret github_token
     sensor:
       - name: fireflyIII_release_notes
         value_template: >
@@ -49,8 +70,12 @@ rest:
           - body
           - html_url
     scan_interval: 21600
+    headers: *rest_header
 
   - resource: https://api.github.com/repos/jonaswinkler/paperless-ng/releases/latest
+    authentication: basic
+    username: !secret github_username 
+    password: !secret github_token
     sensor:
       - name: paperlessng_release_notes
         value_template: >
@@ -59,8 +84,12 @@ rest:
           - body
           - html_url
     scan_interval: 21600
+    headers: *rest_header
 
   - resource: https://api.github.com/repos/bastienwirtz/homer/releases/latest
+    authentication: basic
+    username: !secret github_username 
+    password: !secret github_token
     sensor:
       - name: homer_release_notes
         value_template: >
@@ -69,8 +98,12 @@ rest:
           - body
           - html_url
     scan_interval: 21600
+    headers: *rest_header
 
   - resource: https://api.github.com/repos/mrvnklm/homeassistant-desktop/releases/latest
+    authentication: basic
+    username: !secret github_username 
+    password: !secret github_token
     sensor:
       - name: homeassistant_desktop_release_notes
         value_template: >
@@ -79,6 +112,7 @@ rest:
           - body
           - html_url
     scan_interval: 21600
+    headers: *rest_header
 
   #-------------------------------------------
   #  Plex Server
