youtube_token.txt → secret

--- a/btn_card_templates/button_card_templates.yaml
+++ b/btn_card_templates/button_card_templates.yaml
@@ -1217,8 +1217,7 @@
 
   media_youtube:
     variables:
-      token:
-        !include .youtube_token.txt
+      token: !secret youtube_token
     custom_fields:
       youtube: >
         [[[
