--- a/include/themes.yaml
+++ b/include/themes.yaml
@@ -308,15 +308,10 @@ frontend:
             color: #9e9e9e;
           }
 
-        "mwc-icon-button":
+        mwc-icon-button:
           $: |
             button > mwc-ripple {
               margin-top: 3px;
-            }
-
-        "layout-card$grid-layout$": |
-            #root {
-              margin: 0 !important;
             }
 
         $: |
