--- a/btn_card_templates/button_card_templates.yaml
+++ b/btn_card_templates/button_card_templates.yaml
@@ -1073,7 +1073,7 @@
         [[[
           if (entity) {
             let data = entity.attributes.data;
-            return Math.floor(Math.random() * (data.length - 1)) + 1;
+            return data === undefined || Math.floor(Math.random() * (data.length - 1)) + 1;
           }
         ]]]
     state_display: >
