--- a/configuration.yaml
+++ b/configuration.yaml
@@ -30,6 +30,7 @@ homeassistant:
 #-------------------------------------------
 # Front End UI
 # https://www.home-assistant.io/lovelace
+# https://javascript.plainenglish.io/what-is-cache-busting-55366b3ac022
 #-------------------------------------------
 lovelace:
   mode: yaml
@@ -46,7 +47,9 @@ lovelace:
       { url: /hacsfiles/lovelace-more-info-card/more-info-card.js,                  type: module },
       { url: /hacsfiles/light-popup-card/light-popup-card.js,                       type: module },
       { url: /hacsfiles/light-entity-card/light-entity-card.js,                     type: module },
-      { url: /hacsfiles/webrtc/www/webrtc-camera.js,                                type: module },
+
+      # https://community.home-assistant.io/t/realtime-camera-streaming-without-any-delay-webrtc/258216/384
+      { url: '/webrtc/webrtc-camera.js?v2.2.0',                                     type: module },
 
       { url: '/local/custom_icons.js?v=28082021',                                   type: module },
       { url: '/local/marked.min.js?v=4.0.12',                                       type: module },
